
      - OFS Image: Image and File updated to use isinstance(data, str)
        and raises TypeError upon encountering unicode objects.

      - OFS Application: Updated deprecation warnings.
        Support for '__ac_permissions__' and 'meta_types' will be removed in
        Zope 2.11, 'methods' support might remain longer.

    Features added

      - integrated ZODB 3.8
    
      - integrated Zope 3.4

      - Support for using zopectl on Windows has been added. All commands are
        supported and there are two Windows specific ones: install and remove,
        which install or remove the Windows service. The start, stop and
        restart commands handle the Windows service. In order to use them, you
        need to call 'bin\zopectl install' once.

      - ZCatalog result objects (catalog brains) now have an interface,
        ZCatalog.interfaces.ICatalogBrain.

      - A new module, AccessControl.requestmethod, provides a decorator
        factory that limits decorated methods to one request method only.
        For example, marking a method with @requestmethod('POST') limits
        that method to POST requests only when published. Several
        security-related methods have been limited to POST only.

      - PythonScripts: allow usage of Python's 'sets' module

      - added 'fast_listen' directive to http-server and webdav-source-server
        sections in etc/zope.conf in order to defer the opening of the sockets
        until the late startup phase. This in in particular useful when running
        Zope behind a loadbalancer (patch by Patrick Gerken).

      - the ZopePageTemplate implementation now uses unicode internally.
        Non-unicode instances are migrated on-the-fly to unicode. However this
        will work only properly for ZPT instances formerly encoded as utf-8 or
        ISO-8859-15. For other encodings you might set the environment variable
        ZPT_REFERRED_ENCODING to insert your preferred encoding in front of